Commit in settings related to img-Anjali

--- a/xPloreBlog/templates/xPloreBlog/about.html
+++ b/xPloreBlog/templates/xPloreBlog/about.html
@@ -52,7 +52,7 @@
   <div class="col-lg-6 tm-mb-60 tm-person-col">
     <div class="media tm-person">
       <img
-        src="{% static 'img/anjali.jpg' %}"
+        src="{% static 'img/Anjali.jpg' %}"
         alt="Image"
         class="img-fluid mr-4"
       />
