Commit in, migrate to PostgreSQL

--- a/xPloreBlog/templates/xPloreBlog/welcome.html
+++ b/xPloreBlog/templates/xPloreBlog/welcome.html
@@ -5,6 +5,9 @@
 <!--Line Separator-->
 
 {% block content %}
+<article class="col-12 col-md-12">
+  <hr class="tm-hr-primary pb-4" />
+</article>
 
 <section id="Top-rated-details" class="pt-0">
   <div class="container" style="height: 275 px">
