Commit related to Change menu option add - Dashboard and replace top-rated-posts inside Dashboard

--- a/ParadigmPortal/templates/base.html
+++ b/ParadigmPortal/templates/base.html
@@ -75,9 +75,9 @@
             <li
               class="tm-nav-item {% if request.path == '/top-rated-posts/' %} active {% endif %}"
             >
-              <a href="{% url 'top-rated-posts' %}" class="tm-nav-link">
-                <i class="fas fa-pen"></i>
-                Top Rated Posts
+              <a href="{% url 'post-dashboard' %}" class="tm-nav-link">
+                <i class="fa fa-dashboard"></i>
+                Dashboard
               </a>
             </li>
 
