--- a/xPloreBlog/templates/xPloreBlog/dashboard.html
+++ b/xPloreBlog/templates/xPloreBlog/dashboard.html
@@ -11,7 +11,11 @@
 <div class="row tm-row">
   <div class="col-sm-12 col-xl-6">
     <div class="bg-light rounded h-100 p-4">
-      <h6 class="mb-4">Top Rated Posts</h6>
+      <h6 class="mb-4">
+        <a href="{% url 'top-rated-posts' %}" class="effect-lily tm-post-link"
+          >Top Rated Posts</a
+        >
+      </h6>
       <div>
         <img
           class="dashboard-chart"
