Commit related to Change menu - Dashboard icon

--- a/ParadigmPortal/templates/base.html
+++ b/ParadigmPortal/templates/base.html
@@ -76,7 +76,7 @@
               class="tm-nav-item {% if request.path == '/top-rated-posts/' %} active {% endif %}"
             >
               <a href="{% url 'post-dashboard' %}" class="tm-nav-link">
-                <i class="fa fa-dashboard"></i>
+                <i class="fas fa-th-large"></i>
                 Dashboard
               </a>
             </li>
