Changed Modal Menu - remove top rated and add  Dashboard

--- a/xPloreBlog/templates/xPloreBlog/includes/menu_modal.html
+++ b/xPloreBlog/templates/xPloreBlog/includes/menu_modal.html
@@ -34,9 +34,9 @@
               </a>
             </li>
             <li>
-              <a href="{% url 'top-rated-posts' %}" class="tm-nav-link">
-                <i class="fas fa-pen"></i>
-                Top Rated
+              <a href="{% url 'post-dashboard' %}" class="tm-nav-link">
+                <i class="fas fa-th-large"></i>
+                Dashboard
               </a>
             </li>
             <li>
